# CSC2025-sten

./: CMakeLists.txt  NOTES.md  README.md
src/: ex0.0_benchmarking_basics.cpp  ex0.1_time.cpp  ex0.2_benchmarking_advanced.cpp  ex1.0_scaling.cpp  ex1.1_complexity.cpp  ex2.0_cache.cpp  parameters.hpp  plot.ipynb
src/algorithms/: ex1.0_algorithms.cpp  ex1.0_algorithms.hpp  ex1.1_algorithms.cpp  ex1.1_algorithms.hpp
